# jobswipe-career-navigator

./: .env  .gitignore  README.md  env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: deploy.yml
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/generator/: app.py  tempCodeRunnerFile.py
backend/generator/functions/: __init__.py  compatibility.py  content_selector.py  cover_letter_generator.py  cv_generator.py  cv_parsing.py  demo_notebook.ipynb  experience_generator.py  generator_service.py  job_offer_parser.py  matcher_engine.py  test_compatibility.py  test_content_selector.py  test_cover_letter_generator.py  test_cv_generator.py  test_experience_generator.py  test_generator_service.py  test_job_offer_parser.py  test_matcher_engine.py
backend/jobswipe_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/routers/: alerts.py  chat.py  cv_html.py  jobs.py
backend/services/: adzuna.py
backend/utils/: parser.py
extension/: content.js  package-lock.json  package.json
extension/public/: content.js  manifest.json
extension/src/: Popup.tsx  index.css
public/: manifest.webmanifest  service-worker.js
seo/: FINAL_REPORT.md  IMMEDIATE_ACTION.md  NEXT_COMMITS.md  README.md  STATUS.md  audit.md  roadmap.md
src/: App.tsx  index.css  main.tsx
src/components/: CVPreview.tsx  DeleteAccountButton.example.md  DeleteAccountButton.tsx  GeneratedDocumentView.tsx  JobCard.tsx  LogoHeader.tsx  OfferDetailModal.tsx  OwlDotsMascot.tsx  (+2 more)
supabase/: config.toml
(+37 files in other folders)
