[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2pdf>=0.1.8",
    "fastapi>=0.128.0",
    "google-genai>=1.0.0",
    "pydantic>=2.12.5",
    "pyhere>=1.0.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.39.0",
    "xhtml2pdf>=0.2.17",
]
