[project]
name = "jobswipe-generator"
version = "0.1.0"
description = "API de génération de CV et Lettres de motivation avec IA"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pydantic",
    "python-dotenv",
    "google-genai",
    "python-docx",
    "xhtml2pdf",
    "pyhere",
    "pypdf",
    "spacy>=3.8.11",
    "scikit-learn>=1.7.2",
    "numpy>=2.2.6",
    "pip>=25.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["generator*", "routers*", "services*"]
